--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,8 @@
 {erl_opts, [debug_info]}.
-{deps, [{meck, "0.9.2"}]}.
+{deps, [
+  {meck, "0.9.2"},
+	{riakc, "3.0.*", {git, "https://github.com/basho/riak-erlang-client", {tag, "3.0.8"}}}
+  ]}.
 
 {shell, [
   % {config, "config/sys.config"},
