added release options to rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -8,3 +8,9 @@
   % {config, "config/sys.config"},
     {apps, [forest_b]}
 ]}.
+{relx, [{release, {test_release, "0.0.1"},
+         [{forest_b, "0.0.1", permanent}]},
+        {dev_mode, true},
+        {include_erts, false},
+
+        {extended_start_script, true}]}.
