tried another app name

--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,7 @@
     {apps, [forest_b]}
 ]}.
 {relx, [{release, {test_release, "0.0.1"},
-         [{forest_b, "0.0.1", permanent}]},
+         [{forest_b_app, "0.0.1", permanent}]},
         {dev_mode, true},
         {include_erts, false},
 
